--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ bin-release/
 *.ipa
 *.apk
 
+# Python Cache
+*.pyc
+core/__pycache__/
+
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
